--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -3,6 +3,37 @@
 @import "font-awesome-sprockets";
 @import "font-awesome";
 
+#newItemListModal {
+	// background: white;
+}
+
+.new_item_list {
+	background: #e9e9e9;
+	padding: 0px !important;
+	padding-bottom: 20px;
+	border-radius: 6px;
+}
+
+.modal-dialog {
+	width: 80%;
+}
+
+.list-choices {
+	margin: 0 auto;
+	padding-bottom: 20px;
+}
+
+
+
+.list-small {
+	width: 80%;
+	text-align: center;
+	margin: 0 auto;
+}
+.added-item {
+	background: #e9e9e9;
+}
+
 .confirm {
 	text-align: center;
 }
@@ -33,6 +64,40 @@
 	}
 }
 
+.post-list {
+	height: 150px;
+	width: 750px;
+	background: white;
+	padding: 10px;
+	margin: 0 auto;
+	background-size: cover;
+	// background-repeat: no-repeat;
+	// background-size: 100% 100%;
+	background-position: center;
+	min-height: 150px;
+	position: relative;
+	box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.22);
+	text-align: center;
+	// background: #534540;
+
+}
+
+.list-small {
+	background: white;
+	padding: 10px;
+	box-shadow: 0 1px 3px 0 rgba(0,0,0,0.33);
+}
+
+
+.pagination {
+	margin: 0px;
+}
+
+header {
+	box-shadow: 0 1px 2px 0 rgba(0,0,0,0.22);
+	z-index: 10000;
+}
+
 .form-control {
 	max-width: 300px;
 }
@@ -45,7 +110,7 @@
 }
 
 .profile-img img {
-	height: 40px;
+	height: 80px;
 	border-radius: 100%;
 	border: 2px solid white;
 }
@@ -162,8 +227,10 @@ a {
 	text-transform: uppercase;
 	line-height: 24px;
 	margin-bottom: 10px;
-	margin-top: 50px;
 	color: #444;
+	margin-top: 0px;
+	padding-top: 30px;
+	padding-bottom: 30px;
 }
 
 .title--subtext {
@@ -183,6 +250,7 @@ a {
 .post-item {
 	transition: background, 0.1s;
 	background: white;
+	box-shadow: 0 1px 2px 0 rgba(0,0,0,0.22);
 	&:hover {
 		background: #f7f7fa;
 		.new_subscription button {
@@ -200,6 +268,7 @@ a {
 			transition: all .2s ease-in-out;
 		}
 	}
+	// width: 800px;
 	font-size: 18px;
 	min-height: 80px;
 	line-height: 10px;
@@ -209,12 +278,13 @@ a {
 	box-sizing: border-box;
 	border-radius: 3px;
 	cursor: pointer;
-	margin: 0 -10px;
+	margin: 0 auto;
 	padding: 15px;
 	position: relative;
-	margin-bottom: 40px;
+	margin-bottom: 20px;
+	// height: 250px;
 	div {
-		padding-bottom: 10px;
+		// padding-bottom: 10px;
 	}
 	a {
 		text-decoration: none;
@@ -337,6 +407,10 @@ a {
 	margin-top: 13px;
 	form {
 		width: inherit;
+		button {
+			background-image: linear-gradient(#e63d44, #c11a22);
+			width: 70px;
+		}
 	}
 	li {
 		// float:left;
@@ -385,14 +459,18 @@ a {
 .post-item--subtext {
 	line-height: 25px;
 	color: #444;
+	font-size: 14px;
+	color: gray;
 }
 
 .post-item--text--name {
 	
-	color: #444;
-	font-size: 30px;
-	font-weight: 500;
+	color: white;
+	font-size: 18px;
+	font-weight: 400;
 	margin: 5px 0px 0;
+	margin-bottom: 0px;
+	padding-bottom: 0px;
 	&:hover {
 		color: #333;
 		// text-decoration: none;
@@ -401,6 +479,8 @@ a {
 	.title--subtext {
 		text-transform: uppercase;
 	}
+	text-align: center;
+
 }
 
 
@@ -432,6 +512,7 @@ a {
 	margin: 0;
 	padding: 0;
 	min-height: 500px;
+	background: #e9e9e9;
 }
 
 .main-content {
@@ -612,6 +693,7 @@ div {
 	.follow-form {
 		button {
 			width: 350px;
+			background-image: linear-gradient(#e63d44, #c11a22) !important;
 		}
 		#unfollow {
 			background: #e54b4b;
@@ -704,6 +786,7 @@ div {
 	// height: 40px;
 	padding: 15px 0;
 	overflow: hidden;
+	background: #e9e9e9;
 }
 
 .header--nav {
@@ -724,9 +807,10 @@ div {
 }
 
 .header--secondary {
-	background: #f7f7fa;
+	background: white;
 	border-bottom: 1px solid #e4e2e2;
 	height: 65px;
+	box-shadow: 0 1px 2px 0 rgba(0,0,0,0.22);
 	padding: 15px 0;
 	#filter {
 		float: right;
@@ -737,6 +821,9 @@ div {
 	form {
 		float: left;
 		height: 100%;
+		button {
+			background: white;
+		}
 	}
 	.btn-gray {
 		font-size: 16px;
@@ -761,6 +848,7 @@ html, body {
 	// margin: 0;
 	// font-family: Lato;
 	// font-weight: 600;
+	background: #a7a7a7;
 }
 
 html {
