--- a/app/views/lists/_list.html.haml
+++ b/app/views/lists/_list.html.haml
@@ -1,15 +1,16 @@
-.post-item
+
+.post-list{style: %(background-image:url(/assets/book.jpg))}
   .post-item-content
     / %span.title--subtext.post-date= "#{list.updated_at.strftime('%A')}"
-    .post-follow-button
-      - if user_signed_in?
-        = render partial: 'lists/follow_form', locals: {list: list} 
-      - else
-        .follow-form#follow_form.new_subscription{id: "list" + list.id.to_s}
-          %button.btn-primary.btn{"data-target" => "#myModal", "data-toggle" => "modal", :type => "button"}
-            Get Email Updates
-          %ul
-          = render partial: 'shared/sign_in_modal'
+    / .post-follow-button
+    /   - if user_signed_in?
+    /     = render partial: 'lists/follow_form', locals: {list: list} 
+    /   - else
+    /     .follow-form#follow_form.new_subscription{id: "list" + list.id.to_s}
+    /       %button.btn-primary.btn{"data-target" => "#myModal", "data-toggle" => "modal", :type => "button"}
+    /         Get Email Updates
+    /       %ul
+    /       = render partial: 'shared/sign_in_modal'
     =link_to(list) do
       .post-item--actions
         .post-item--actions--users
@@ -18,7 +19,8 @@
           /     .profile-img= image_tag(User.find_by(id: list.submitter).image)
       .post-item--text
         .post-item--text--name
-          %span= list.title
+          %span
+            %h3= list.title
 
 
           / - if list.created_at > Time.now - 24.hours
@@ -26,6 +28,6 @@
         .post-item--subtext
           =raw list.subtitle
         .post-item--text-tags
-          Topics:
+          / Topics:
           - list.tags.each do |tag| 
             %span.post-item--text-tag{class: "tag-" + tag.name}= tag.name
