Change icons on home

--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -33,18 +33,18 @@
 
   .col-md-4.value
     %h3
-      %i.fa.fa-compass 
+      %i.fa.fa-clock-o 
       Get the latest
     See a collection of new academic articles every day, catered to your interests 
 
   .col-md-4.value
     %h3 
-      %i.fa.fa-map-marker 
+      %i.fa.fa-folder-open 
       Stay organized
     Create collections of articles and never stress out about keeping track of articles you need
   .col-md-4.value
     %h3 
-      %i.fa.fa-university
+      %i.fa.fa-users
       Explore the community
     See what other people are reading by exploring their collections
 
