Change footer email

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -50,7 +50,7 @@
     .container-fluid
       .pull-right
         Send emails to 
-        = mail_to "ethan@econforward.com"
+        = mail_to "ethan@econfrontier.com"
 :javascript
   var $pagecontent = $('#page-wrapper').html();
   $(document).on('click', '.follow-form button', function(){
