--- a/app/views/collections/show.html.haml
+++ b/app/views/collections/show.html.haml
@@ -1,4 +1,4 @@
-.page-header.v-collections.v-brown{style: %(background-image:url(/assets/librarydrawing.jpg))}
+.page-header.v-collections.v-brown{style: %(background-image:url(/assets/librarydrawing-6d55a7e7d1ed6ec639a1d5d7942261bd.jpg))}
   .page-header--shadow
     .container
       .title.v-big
