Add tags to items

--- a/app/views/items/_item.html.haml
+++ b/app/views/items/_item.html.haml
@@ -6,6 +6,8 @@
 
   %li#item_authors= item.authors
   %li#item_category
+    %span= "Matched with"
+    %span.category= item.tag
     / # %span= "Found in"
     / # %span.category= "Alcoholism"
 
