--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -127,9 +127,25 @@ a:hover {
 	border-radius: 0px;
 }
 
+.btn-frontier-visible {
+	background: -webkit-linear-gradient(#e3262e, #ab171e);
+	box-shadow: 0 1px 2px 0 rgba(0,0,0,0.22);
+	border: 1px solid #920c12;
+	color: white;
+	// font-weight: bold;
+	&:hover {
+		color: white;
+		background: linear-gradient(#e63d44, #c11a22);
+	}
+	border-radius: 0px;
+}
+
+
 .static a {visibility: visible;}
 
-
+.fa-heart {
+	color: red;
+}
 
 
 
