Change 'economics' to 'social science' in header

--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -10,7 +10,7 @@
               %h1 
                 %span ResearchFrontier
                 %div
-                  %sup ECONOMICS
+                  %sup SOCIAL SCIENCE
             / %h5 Follow topics in development and never miss a new finding
         %ul.header--nav
           %span.new-collection
