Add mixpanel analytics

--- a/app/views/collection_items/_new_collection_item.html.haml
+++ b/app/views/collection_items/_new_collection_item.html.haml
@@ -6,3 +6,8 @@
 
   .row
     = render @collections
+
+:javascript
+  $('.add-btn').click(function() {
+      mixpanel.track("Add paper to collection")
+    })
