--- a/app/views/collections/_collection.html.haml
+++ b/app/views/collections/_collection.html.haml
@@ -8,7 +8,7 @@
       = form_for @collection_item, url: {action: "create"} do |f|
         = f.hidden_field :item_id, value: @item.id
         = f.hidden_field :collection_id, value: collection.id
-        = button_tag(class: "btn btn-primary", type: "submit", data: {disable_with: "Added!", remote:true}) do
+        = button_tag(class: "btn btn-primary add-btn", type: "submit", data: {disable_with: "Added!", remote:true}) do
           Add
 
         / = f.submit "Add", class: "btn btn-primary btn-frontier", remote:true, disable_with: 'Executing...'
