--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -23,3 +23,9 @@
 
 .container  
   = will_paginate @feed_groups
+  
+  
+:javascript
+  $('.item_title a').click(function() {
+    mixpanel.track("View abstract")
+  })
