--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -16,7 +16,6 @@
 	padding: 10px 10px 10px 15px;
 	h3 {margin-top: 10px;}
 	box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.22);
-	margin-top: 10px;
 }
 
 body {
@@ -58,7 +57,7 @@ body {
 	color: #bbbbbb;
 }
 
-#item_title h4 {margin-bottom: 0px;}
+.item_title h4 {margin-bottom: 0px;}
 
 .category {
 	// color: red;
