--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -26,6 +26,6 @@
   
   
 :javascript
-  $('.item_title a').click(function() {
-    mixpanel.track("View abstract")
+  $(document).on('click', '.collect-btn', function(event) {
+      mixpanel.track("Collect")
   })
