--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -18,7 +18,7 @@
   - @feed_groups.each do |date, items|
     %h4.day.v-big
       %span= format_date(Date.parse(date).strftime('%B %d %A'))
-      / # %span.title--subtext= date.rpartition(' ').first
+      %span.title--subtext= Date.parse(date).strftime('%B %d %A').rpartition(' ').first
     .container
       = render items
 
