--- a/app/views/items/_item.html.haml
+++ b/app/views/items/_item.html.haml
@@ -6,8 +6,10 @@
 
   %li#item_authors= item.authors
   %li#item_category
-    %span= "Matched with"
-    %span.category= item.tag
+    %span.category
+      - item.tags.each do |tag|
+        %span= "Matched with"
+        %span tag
     / # %span= "Found in"
     / # %span.category= "Alcoholism"
 
