Final fix on tags

--- a/app/views/items/_item.html.haml
+++ b/app/views/items/_item.html.haml
@@ -9,7 +9,7 @@
     %span.category
       - item.tags.each do |tag|
         %span= "Matched with"
-        %span= tag
+        %span= tag.name
     / # %span= "Found in"
     / # %span.category= "Alcoholism"
 
