Add tags list to side panel of home page

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -34,6 +34,23 @@ body {
 	// box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.22);
 }
 
+.tags {
+	margin-top: 82px;
+	background: white;
+	box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.22);
+	li span {
+		background: #e9e9e9;
+		border: 1px solid gray;
+		padding: 5px;
+		border-radius: 25px;
+	}
+	li {
+		margin-bottom: 15px;
+	}
+	padding-bottom: 10px;
+
+}
+
 .item {
 	background: white;
 	// margin: 10px 0px 0px 0px;
