--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -14,16 +14,26 @@
             / %button.btn.pull-right
             /   Join the beta
 
-%ul
-  - @feed_groups.each do |(month, date), items|
-    %h4.day.v-big
-      %span= format_date(date.to_date.strftime('%B %d %A'))
-      %span.title--subtext= date.to_date.strftime('%B %d %A').rpartition(' ').first
-    .container
-      = render items
+.container
+  .row
+    .col-sm-2.tags
+      %h5 Your Tags
+      %ul
+      - if user_signed_in?
+        - current_user.tags.each do |tag|
+          %li
+            %span=tag.name
+    .col-sm-10.col-xs-12
+      %ul
+        - @feed_groups.each do |(month, date), items|
+          %h4.day.v-big
+            %span= format_date(date.to_date.strftime('%B %d %A'))
+            %span.title--subtext= date.to_date.strftime('%B %d %A').rpartition(' ').first
+          / .container
+          = render items
 
-.container  
-  = will_paginate @feed_groups
+      / .container  
+      = will_paginate @feed_groups
 
 
 :javascript
