--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -38,16 +38,24 @@ body {
 	margin-top: 82px;
 	background: white;
 	box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.22);
+	h5 {
+		text-align: center;
+	}
 	li span {
 		background: #e9e9e9;
 		border: 1px solid gray;
 		padding: 5px;
-		border-radius: 25px;
+		border-radius: 10px;
+		// line-height: 30px;
+		float: left;
+		margin-bottom: 5px;
+		margin-right: 5px;
 	}
 	li {
-		margin-bottom: 15px;
+		margin-bottom: 5px;
 	}
 	padding-bottom: 10px;
+	font-size: .8em;
 
 }
 
