--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -41,29 +41,49 @@ body {
 	h5 {
 		text-align: center;
 	}
-	li span {
-		background: #e9e9e9;
-		border: 1px solid gray;
-		padding: 5px;
-		border-radius: 10px;
-		// line-height: 30px;
-		float: left;
-		margin-bottom: 5px;
-		margin-right: 5px;
-	}
-	li {
-		margin-bottom: 5px;
-	}
 	padding-bottom: 10px;
-	font-size: .8em;
 
+}
+
+.feed_group {
+	box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.22);
+}
+
+.tag {
+	background: #e9e9e9;
+	border: 1px solid gray;
+	padding: 5px;
+	border-radius: 10px;
+	// line-height: 30px;
+	// float: left;
+	margin-bottom: 5px;
+	margin-right: 5px;
+	margin-bottom: 5px;
+	font-size: .8em;
+	&:hover {
+		background: #d3d3d3;
+	}
+}
+
+.tags .tag {
+	float: left;
+}
+
+.category li {
+	float: left;
+	margin-right: 5px;
+}
+
+.item_category {
+	// min-height: 50px;
 }
 
 .item {
 	background: white;
 	// margin: 10px 0px 0px 0px;
-	height: 100px;
+	// height: 100px;
 	padding: 10px;
+	padding-bottom: 20px;
 	border-bottom: 1px solid #f5f5f5;
 	margin-bottom: 0px;
 	&:hover {
@@ -82,12 +102,9 @@ body {
 	color: #bbbbbb;
 }
 
-.item_title h4 {margin-bottom: 0px;}
+.item-title h4 {margin: 0px;}
 
-.category {
-	// color: red;
-	font-weight: bold;
-}
+
 
 .modal-title {
 	text-transform: none !important; 
