--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -18,6 +18,11 @@
 	box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.22);
 }
 
+#journal {
+	// font-family: 'Bilbo Swash Caps', cursive;
+	font-family: 'Pacifico', cursive;
+}
+
 body {
 	background: #e9e9e9;
 	color: #444;
