--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -79,8 +79,9 @@ body {
 	margin-right: 5px;
 }
 
-.item_category {
+#item_category {
 	// min-height: 50px;
+	margin-top: 10px;
 }
 
 .item {
@@ -88,7 +89,7 @@ body {
 	// margin: 10px 0px 0px 0px;
 	// height: 100px;
 	padding: 10px;
-	padding-bottom: 20px;
+	padding-bottom: 10px;
 	border-bottom: 1px solid #f5f5f5;
 	margin-bottom: 0px;
 	&:hover {
