--- a/app/views/items/_item.html.haml
+++ b/app/views/items/_item.html.haml
@@ -5,7 +5,7 @@
     %li.item-title
       %h4= link_to item.title, item_path(item), remote:true
 
-    %li#item_authors= item.authors
+    / # %li#item_authors= item.authors
     %li#item_category
       %span Matches with
       - item.tags.each do |tag|
