--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -89,8 +89,9 @@ body {
 	// margin: 10px 0px 0px 0px;
 	// height: 100px;
 	padding: 10px;
-	padding-bottom: 10px;
-	border-bottom: 1px solid #f5f5f5;
+	padding-top: 20px;
+	padding-bottom: 20px;
+	border-bottom: 1px solid #e4d9d9;
 	margin-bottom: 0px;
 	&:hover {
 		background: #f5f5f5;
@@ -108,7 +109,11 @@ body {
 	color: #bbbbbb;
 }
 
-.item-title h4 {margin: 0px;}
+.item-title h4 {
+	margin: 0px;
+	font-size: 1.3em;
+	font-weight: normal;
+}
 
 
 
